# HalideCMake

./: CMakeLists.txt  HalideCMake.cpp  HalideCMake.h  README.md
